# melosic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/melosic/: CMakeLists.txt  decoder_test.hpp  main.cpp  main.d  test_main.cpp
src/melosic/asio/: CMakeLists.txt  audio_impl.hpp  audio_io.hpp  audio_service.hpp
src/melosic/common/: CMakeLists.txt  audiospecs.hpp  bit_flag_iterator.hpp  common.hpp  configvar.hpp  connection.hpp  directories.hpp  error.hpp  exports.hpp  file.hpp  ikernel.hpp  int_get.hpp  logging.hpp  optional.hpp  optional_fwd.hpp  pcm_sample.hpp  pcmbuffer.hpp  plugin.hpp  properties.hpp  ptr_adaptor.hpp  range.hpp  scope_unlock_exit_lock.hpp  signal.hpp  signal_core.hpp  signal_fwd.hpp  smart_ptr_equality.hpp  stream.hpp  string.hpp  thread.hpp  threadsafe_list.hpp  traits.hpp  typeid.hpp  xdg.hpp
src/melosic/common/test/: CMakeLists.txt  audiospecs_test.cpp  ptr_adaptor_test.cpp  signal_test.cpp  string_test.cpp  thread_test.cpp  threadsafe_list_test.cpp
src/melosic/core/: CMakeLists.txt  assert.cpp  audiofile.cpp  audiofile.hpp  configuration.cpp  configuration.hpp  filecache.cpp  filecache.hpp  inputmanager.cpp  inputmanager.hpp  kernel.cpp  kernel.hpp  logging.cpp  logging.hpp  outputmanager.cpp  outputmanager.hpp  pcmbuffer.cpp  pcmbuffer.hpp  player.cpp  player.hpp  player_signals.hpp  playlist.cpp  playlist.hpp  statemachine.cpp  statemachine.hpp  taglibfile.cpp  taglibfile.hpp  track.cpp  track.hpp  track_signals.hpp  wav.d  wav.hpp
src/melosic/core/test/: CMakeLists.txt  playlist_test.cpp  track_test.cpp
src/melosic/executors/: CMakeLists.txt  default_executor.cpp  default_executor.hpp  inline_executor.hpp  loop_executor.hpp  thread_pool.hpp
src/melosic/executors/test/: CMakeLists.txt  loop_executor_test.cpp  thread_pool_test.cpp
src/melosic/gui/: CMakeLists.txt  DynamicSplitView.qml  Log.js  application.hpp  category.cpp  category.hpp  categorylistview.qml  categoryproxymodel.cpp  categoryproxymodel.hpp  categorytag.cpp  categorytag.hpp  configdialog.qml  configmanager.cpp  configmanager.hpp  configurationdialog.cpp  configurationdialog.hpp  configurationdialog.ui  configwidget.cpp  configwidget.hpp  dynamictreemodel.cpp  dynamictreemodel.h  filterpane.cpp  filterpane.hpp  filterview.qml  jsondocmodel.cpp  jsondocmodel.hpp  librarymanager.cpp  librarymanager.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.qml  mainwindow.ui  modeltest.cpp  modeltest.h  naturalsort.js  outputconfwidget.cpp  outputconfwidget.hpp  playercontrols.cpp  playercontrols.hpp  playlistcategorymodel.cpp  (+22 more)
src/melosic/gui/test/: CMakeLists.txt  categoryproxymodel_test.cpp  filter_test.cpp  jsondocmodel_test.cpp
src/melosic/managers/: CMakeLists.txt  common.cpp  common.d  common.h  common.hpp  kernel.d
src/melosic/managers/input/: iinputmanager.hpp  inputmanager.cpp  inputmanager.d  inputmanager.h  inputmanager.hpp  pluginterface.cpp  pluginterface.d  pluginterface.hpp
src/melosic/managers/input/pluginterface/: cpp.h  d.d
src/melosic/managers/output/: ioutputmanager.hpp  outputmanager.cpp  outputmanager.d  outputmanager.hpp  pluginterface.cpp  pluginterface.d  pluginterface.hpp
src/melosic/melin/: CMakeLists.txt  config.cpp  config.hpp  config_signals.hpp  configvar.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  exports.cpp  exports.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  kernel.cpp  kernel.hpp  library.cpp  library.hpp  logging.cpp  logging.hpp  output.cpp  output.hpp  output_signals.hpp  playlist.cpp  playlist.hpp  playlist_signals.hpp  plugin.cpp  plugin.hpp  sigslotmanager.cpp  sigslotmanager.hpp  thread.cpp  thread.hpp
src/melosic/melin/sigslots/: connection.cpp  connection.hpp  delegate.hpp  signals.cpp  signals.hpp  signals_fwd.hpp  slots.cpp  slots.hpp
src/melosic/melin/test/: CMakeLists.txt  config_test.cpp  decoder_manager_test.cpp  input_test.cpp  library_test.cpp
src/melosic/plugins/: CMakeLists.txt
src/melosic/plugins/alsa/: CMakeLists.txt  alsa.cpp  alsa.hpp  alsa_output_service_impl.cpp  alsa_output_service_impl.hpp  alsa_provider.cpp  alsa_provider.hpp
src/melosic/plugins/flac/: CMakeLists.txt  exports.hpp  flac.cpp  flac_provider.cpp  flac_provider.hpp  flacdecoder.cpp  flacdecoder.hpp
src/melosic/plugins/flac/test/: CMakeLists.txt  flac_decoder_test.cpp
src/melosic/plugins/lastfm/: CMakeLists.txt  affiliation.cpp  affiliation.hpp  album.cpp  album.hpp  artist.cpp  artist.hpp  biography.cpp  biography.hpp  error.cpp  error.hpp  event.cpp  event.hpp  exports.hpp  hana_optional.hpp  http_client.cpp  http_client.hpp  image.cpp  image.hpp  lastfm.cpp  lastfm.hpp  lastfmconfig.cpp  lastfmconfig.hpp  location.cpp  location.hpp  mbid.hpp  mfunction.hpp  scrobbler.cpp  scrobbler.hpp  service.cpp  service.hpp  shout.cpp  shout.hpp  tag.cpp  tag.hpp  track.cpp  track.hpp  user.cpp  user.hpp  utilities.hpp  (+4 more)
src/melosic/plugins/lastfm/detail/: params.hpp  transform.hpp
src/melosic/plugins/lastfm/test/: CMakeLists.txt  http_client_test.cpp  lastfm_album_test.cpp  lastfm_artist_test.cpp  lastfm_event_test.cpp  lastfm_track_test.cpp  lastfm_venue_test.cpp  service_test.cpp
src/melosic/plugins/qt-gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  qt-gui.cpp
src/melosic/plugins/wavpack/: CMakeLists.txt  exports.hpp  wavpack.cpp  wavpack_provider.cpp  wavpack_provider.hpp  wavpackdecoder.cpp  wavpackdecoder.hpp
src/melosic/plugins/wavpack/test/: CMakeLists.txt  wavpack_decoder_test.cpp
test/: CMakeLists.txt  album_getinfo.json  artist_getinfo.json  event_getinfo.json  lossless_16_96000_1c.flac  lossless_16_96000_1c.pcm  lossless_16_96000_1c.wv  lossless_24_96000_1c.flac  lossless_24_96000_1c.pcm  lossless_24_96000_1c.wv  lossless_32_96000_1c.pcm  lossless_32_96000_1c.wv  lossless_8_96000_1c.flac  lossless_8_96000_1c.pcm  lossless_8_96000_1c.wv  test1.cpp  track_getinfo.json  venue_search.json
test/wavpack_test_suite/: readme.txt
test/wavpack_test_suite/bit_depths/: 12bit.wv  16bit.wv  8bit.wv  readme.txt
test/wavpack_test_suite/num_channels/: mono-1.wv  readme.txt  stereo-2.wv
(+6 files in other folders)
