SET(SRC_LIST)
SET(SRC_LIST ${SRC_LIST} common.hpp)
SET(SRC_LIST ${SRC_LIST} error.hpp)
SET(SRC_LIST ${SRC_LIST} file.hpp)
SET(SRC_LIST ${SRC_LIST} stream.hpp)
SET(SRC_LIST ${SRC_LIST} properties.hpp)
SET(SRC_LIST ${SRC_LIST} audiospecs.hpp)
SET(SRC_LIST ${SRC_LIST} range.hpp)
SET(SRC_LIST ${SRC_LIST} string.hpp)

add_library(common_heads STATIC ${SRC_LIST})
set_target_properties(common_heads PROPERTIES LINKER_LANGUAGE CXX)
