SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} common.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} error.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} file.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} stream.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} properties.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} audiospecs.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} range.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} string.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} smart_ptr_equality.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} signal.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} ptr_adaptor.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} signal_fwd.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} signal_core.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} connection.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} configvar.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} thread.hpp)
SET(COMMON_SRC_LIST ${COMMON_SRC_LIST} typeid.hpp)

add_library(common_heads STATIC ${COMMON_SRC_LIST})
set_target_properties(common_heads PROPERTIES LINKER_LANGUAGE CXX)

add_subdirectory(test)
