SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/wav.hpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/player.cpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/player_signals.hpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/playlist.cpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/track.cpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/track_signals.hpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/filecache.cpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/audiofile.cpp)
SET(CORE_SRC_LIST ${CORE_SRC_LIST} PARENT_SCOPE)

add_subdirectory(test)
