set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/decoder.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/encoder.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/input.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/output.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/plugin.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/logging.cpp)
set(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/exports.cpp)
SET(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/config.cpp)
SET(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/playlist.cpp)
SET(MELIN_SRC_LIST ${MELIN_SRC_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/kernel.cpp)
SET(MELIN_SRC_LIST ${MELIN_SRC_LIST} PARENT_SCOPE)

add_subdirectory(test)
