set(ALSA alsa)
find_package(ALSA REQUIRED)
find_package(Boost COMPONENTS thread REQUIRED)
add_library(${ALSA} SHARED alsa.cpp)
target_link_libraries(${ALSA} ${ALSA_LIBRARIES} ${Boost_LIBRARIES} melosiccore)
set_target_properties(${ALSA} PROPERTIES PREFIX "")
set_target_properties(${ALSA} PROPERTIES SUFFIX ".melin")
include_directories(../../.. ${ALSA_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
